--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homework",
+  "name": "homework12",
   "version": "1.0.0",
   "description": "Developers are often tasked with creating interfaces that make it easy for non-developers to view and interact with information stored in databases. Often these interfaces are known as **C**ontent **M**anagement **S**ystems. In this homework assignment, your challenge is to architect and build a solution for managing a company's employees using node, inquirer, and MySQL.",
   "main": "app.js",
@@ -15,10 +15,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/s88leigh/Employee-Tracker.git"
+    "url": ""
   },
   "bugs": {
-    "url": "https://github.com/s88leigh/Employee-Tracker/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/s88leigh/Employee-Tracker#readme"
+  "homepage": "https://github.com/Eimer87/Homework12#readme"
 }
